--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bratgenerator.store/">
+    <meta property="og:url" content="https://www.bratgenerator.store/">
     <meta property="og:title" content="Brat Generator - Create Your Own Brat Album Cover">
     <meta property="og:description" content="Generate custom album covers inspired by Charli XCX's Brat. Free online tool with green and white backgrounds.">
-    <meta property="og:image" content="https://bratgenerator.store/og-image.png">
+    <meta property="og:image" content="https://www.bratgenerator.store/og-image.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://bratgenerator.store/">
+    <meta property="twitter:url" content="https://www.bratgenerator.store/">
     <meta property="twitter:title" content="Brat Generator - Create Your Own Brat Album Cover">
     <meta property="twitter:description" content="Generate custom album covers inspired by Charli XCX's Brat. Free online tool with green and white backgrounds.">
-    <meta property="twitter:image" content="https://bratgenerator.store/og-image.png">
+    <meta property="twitter:image" content="https://www.bratgenerator.store/og-image.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
