--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                         <div class="link-group">
                             <h4>Support</h4>
                             <a href="mailto:hello@bratgenerator.store">Contact</a>
-                            <a href="#">Privacy Policy</a>
-                            <a href="#">Terms of Service</a>
+                            <a href="privacy-policy.html">Privacy Policy</a>
+                            <a href="terms-of-service.html">Terms of Service</a>
                         </div>
                     </div>
                 </div>
@@ -426,8 +426,8 @@
                             <div class="link-group">
                                 <h4>Support</h4>
                                 <a href="mailto:hello@bratgenerator.store">Contact</a>
-                                <a href="#">Privacy Policy</a>
-                                <a href="#">Terms of Service</a>
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                                <a href="terms-of-service.html">Terms of Service</a>
                             </div>
                         </div>
                     </div>
@@ -543,8 +543,8 @@
                             <div class="link-group">
                                 <h4>Support</h4>
                                 <a href="mailto:hello@bratgenerator.store">Contact</a>
-                                <a href="#">Privacy Policy</a>
-                                <a href="#">Terms of Service</a>
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                                <a href="terms-of-service.html">Terms of Service</a>
                             </div>
                         </div>
                     </div>
