改隐私政策和服务协议的邮箱和更新日期

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="content-container legal-content">
             <h1>Terms of Service</h1>
-            <p class="last-updated">Last updated: June 30, 2024</p>
+            <p class="last-updated">Last updated: June 30, 2025</p>
 
             <h2>1. Acceptance of Terms</h2>
             <p>By accessing and using Brat Generator ("the Service") at bratgenerator.store, you accept and agree to be bound by the terms and provision of this agreement. If you do not agree to abide by the above, please do not use this service.</p>
@@ -106,7 +106,7 @@
             <h2>13. Contact Information</h2>
             <p>If you have any questions about these Terms of Service, please contact us at:</p>
             <ul>
-                <li>Email: hello@bratgenerator.store</li>
+                <li>Email: hilenhwong70@gmail.com</li>
                 <li>Website: bratgenerator.store</li>
             </ul>
 
@@ -139,7 +139,7 @@
                     
                     <div class="link-group">
                         <h4>Support</h4>
-                        <a href="mailto:hello@bratgenerator.store">Contact</a>
+                        <a href="mailto:hilenhwong70@gmail.com?subject=Brat Generator - Contact & Support">Contact</a>
                         <a href="privacy-policy.html">Privacy Policy</a>
                         <a href="terms-of-service.html">Terms of Service</a>
                     </div>
