--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="content-container legal-content">
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last updated: June 30, 2024</p>
+            <p class="last-updated">Last updated: June 30, 2025</p>
 
             <h2>1. Introduction</h2>
             <p>Welcome to Brat Generator ("we," "our," or "us"). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website bratgenerator.store and use our brat-style album cover generator service.</p>
@@ -101,7 +101,7 @@
             <h2>10. Contact Us</h2>
             <p>If you have any questions about this Privacy Policy, please contact us at:</p>
             <ul>
-                <li>Email: hello@bratgenerator.store</li>
+                <li>Email: hilenhwong70@gmail.com</li>
                 <li>Website: bratgenerator.store</li>
             </ul>
 
@@ -131,7 +131,7 @@
                     
                     <div class="link-group">
                         <h4>Support</h4>
-                        <a href="mailto:hello@bratgenerator.store">Contact</a>
+                        <a href="mailto:hilenhwong70@gmail.com?subject=Brat Generator - Contact & Support">Contact</a>
                         <a href="privacy-policy.html">Privacy Policy</a>
                         <a href="terms-of-service.html">Terms of Service</a>
                     </div>
