副标题优化

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brat Generator - PWA App with Keyboard Shortcuts | Free Multi-Language Album Cover Creator</title>
+    <title>Brat Generator - Free Album Cover Creator | PWA App, Keyboard Shortcuts, 7 Languages | Charli XCX Style</title>
     <meta name="description" content="Advanced brat-style album cover creator with PWA support, keyboard shortcuts, and instant loading. Create covers in 7 languages, install as desktop app, use keyboard navigation (press ? for help). Free forever with offline support!">
     <meta name="keywords" content="brat generator, charli xcx, album cover maker, PWA app, keyboard shortcuts, fast loading, offline support, installable web app, brat summer, lime green aesthetic, free design tool, custom covers, music artwork, online generator, gallery download, multi-language, dutch, french, german, spanish, italian, portuguese, progressive web app">
     <meta name="author" content="Brat Generator">
@@ -53,9 +53,11 @@
     <meta property="og:title" content="Brat Generator - Advanced PWA Album Cover Creator with Keyboard Shortcuts">
     <meta property="og:description" content="Create brat-style covers in 7 languages with our PWA app! Features: keyboard shortcuts, offline support, fast lazy loading, and instant desktop installation. Try pressing ? for shortcuts!"
     <meta property="og:image" content="https://www.bratgenerator.store/og-image.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Brat Generator - Create custom brat-style album covers with PWA app and keyboard shortcuts">
+    <meta property="og:image:secure_url" content="https://www.bratgenerator.store/og-image.png">
     <meta property="og:locale" content="en_US">
     
     <!-- Twitter -->
@@ -110,7 +112,7 @@
         "@type": "WebApplication",
         "name": "Brat Generator",
         "url": "https://www.bratgenerator.store/",
-        "description": "Advanced PWA brat-style album cover creator with keyboard shortcuts, offline support, and fast lazy loading. Create covers in 7 languages, install as desktop app, use keyboard navigation. Features curated gallery with instant downloads and culturally relevant examples.",
+        "description": "Advanced PWA brat-style album cover creator with keyboard shortcuts, offline support, and fast lazy loading. Create covers in 7 languages, install as desktop app, use keyboard navigation. Features curated gallery with instant downloads and culturally relevant examples. Free forever with no sign-up required.",
         "applicationCategory": "DesignApplication",
         "operatingSystem": "Web Browser",
         "offers": {
@@ -501,8 +503,14 @@
         <!-- Header Section -->
         <header class="hero" id="create" role="banner">
             <div class="hero-content">
-                <h1 class="hero-title" data-translate="heroTitle">Brat Generator</h1>
+                <div class="hero-title-group">
+                    <h1 class="hero-title" data-translate="heroTitle">Brat Generator</h1>
+                    <span class="hero-seo-tag" itemscope itemtype="https://schema.org/Product">
+                        <span itemprop="name">Free Brat-Style Album Cover Generator</span>
+                    </span>
+                </div>
                 <p class="hero-subtitle" data-translate="heroSubtitle">Create your own brat-style album cover in seconds</p>
+                <p class="hero-sub-subtitle" data-translate="heroSubSubtitle">Free PWA tool • 7 languages • Keyboard shortcuts • Instant download • No sign-up required</p>
             </div>
         </header>
 
