添加 Google AdSense 广告代码
- 在 index.html, faq.html, generate-og-image.html 中添加 AdSense 代码
- 更新 CSP 策略以支持 AdSense 相关域名
- 修复结构化数据问题 (license, creditText, copyrightNotice, acquireLicensePage)
- 添加产品评价和评分结构化数据
- 修复 404 错误 (移除不存在的 gallery 图片引用)

--- a/generate-og-image.html
+++ b/generate-og-image.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Generate OG Image</title>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8584133389230564"
+         crossorigin="anonymous"></script>
 </head>
 <body>
     <canvas id="og-canvas" width="1200" height="630" style="border: 1px solid #ccc;"></canvas>
