--- a/faq.html
+++ b/faq.html
@@ -10,6 +10,10 @@
     <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css">
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8584133389230564"
+         crossorigin="anonymous"></script>
+    
     <!-- DNS prefetch for external resources -->
     <link rel="dns-prefetch" href="//www.googletagmanager.com">
     <link rel="canonical" href="https://www.bratgenerator.store/faq.html">
@@ -24,10 +28,11 @@
     <!-- Content Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self'; 
-        script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com; 
+        script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.google-analytics.com https://pagead2.googlesyndication.com https://www.googleadservices.com https://googleads.g.doubleclick.net; 
         style-src 'self' 'unsafe-inline'; 
-        img-src 'self' data: https:; 
-        connect-src 'self' https://www.google-analytics.com; 
+        img-src 'self' data: https: https://pagead2.googlesyndication.com https://www.google.com https://googleads.g.doubleclick.net; 
+        connect-src 'self' https://www.google-analytics.com https://pagead2.googlesyndication.com https://www.google.com; 
+        frame-src https://googleads.g.doubleclick.net https://tpc.googlesyndication.com; 
         object-src 'none'; 
         base-uri 'self';
         form-action 'self'
