暂时隐藏登录按钮

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="sign-in-btn" data-translate="signIn">Sign in</button>
+                <button class="sign-in-btn" data-translate="signIn" style="display: none;">Sign in</button>
             </div>
 
             <div class="nav-toggle" id="nav-toggle">
